[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["SponsoredByPuma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
openai = "^1.13.3"
pytest = "^8.1.1"
mock = "^5.1.0"
poetry-dotenv-plugin = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

